css/support-style.css
@import url('https://fonts.googleapis.com/css2?family=Karla:wght@700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Karla:wght@700&family=League+Spartan:wght@100;400&family=Roboto:wght@100&display=swap');



body {
    margin: 0;
    padding: 0;
    background-color:#F2F2F2;
}

.navbar {
    border-radius: 0;
    background-color:#F2F2F2;
    z-index: 1000;
    position: fixed; 
    width: 100%; 
}


.navbar-brand {
    padding: 25px;
}

.navbar-brand img {
    height: 40px;
}

.navbar-toggle {
    margin: 25px 15px 25px 0;
}

.navbar-center {
    padding-top: 20px;
}


.navbar-center a {
    color: black !important;
    font-size: 15px;
    font-family: Karla;
}

.navbar-center a:hover {
    transition: .5s;
    color: #ff6d3c !important;
}
     
.navbar-right {
    padding: 20px;
}

.navbar-right a {
    padding: 20px;
}

.navbar-right i {
    font-size: 15px;
    color: black;
}

.navbar-right i:hover {
    transition: .5s;
    color:#ff6d3c;
}

.first-content {
    margin: 10% 2% 0 2%;
}

.content {
    width: max-content;
    position: absolute;
    top: 55%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.content h1, p, form {
    display: flex;
    justify-content: center;
    align-items: center;
}

.content h1 {
    font-family: Karla;
    font-size:48px;
    margin-bottom: 20px;
}

.content p {
    font-family: League Spartan;
    font-size:32px;
    margin-bottom: 7%;
}

.content h1, p {
    color: #ffffff;
}

.form-control {
    font-family: League Spartan;
}


#search-icon {
    padding: 10px;
    margin-right: 5%;
    font-size: 25px;
}

@media(max-width: 1500px) {
    .content {
        padding-bottom: 20%;
    }
}

@media(max-width: 1200px) {
    .content {
        padding-bottom: 30%;
    }

    .content h1 {
        font-size: 38px;
    }

    .content p {
        font-size: 22px;
    }
}


@media(max-width: 992px) {
    .content {
        padding-bottom: 50%;
    }

    .content h1 {
        font-size: 32px;
    }

    .content p {
        font-size: 20px;
    }

}


@media(max-width: 768px) {
    .content {
        width: fit-content;
    }

    .content h1 {
        font-size: 28px;
    }

    .content p {
        font-size: 18px;
    }
}

